# gamedata-gen

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: cibuild.yml
gamedata/sdkhooks.games/: game.neo.txt.in
gamedata/sdktools.games/: game.neo.txt.in
src/: formatter.cpp  formatter.hpp  main.cpp  parser.cpp  parser.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
